feat(wdfAddUserPage): Rename setPermissionsValue to permissionsQuestionValue

--- a/src/app/features/workplace/create-user-account/create-user-account.component.html
+++ b/src/app/features/workplace/create-user-account/create-user-account.component.html
@@ -71,11 +71,11 @@
                 [formControlName]="'permissionsType'"
                 id="permissionsType-{{ i }}"
                 name="permissionsType"
-                value="{{ item.setPermissionsValue }}"
+                value="{{ item.permissionsQuestionValue }}"
                 type="radio"
               />
               <label class="govuk-label govuk-radios__label" for="permissionsType-{{ i }}">
-                {{ item.setPermissionsValue }}
+                {{ item.permissionsQuestionValue }}
               </label>
             </div>
           </div>
