Changed Add-Edit-training so category is passed from mandatory training rather than selected from a form

--- a/src/app/features/workers/new-training-qualifications-record/missing-mandatory-training/missing-mandatory-training.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/missing-mandatory-training/missing-mandatory-training.component.html
@@ -9,7 +9,7 @@
           *ngIf="canEditWorker"
           draggable="false"
           role="button"
-          [routerLink]="['../add-training']"
+          [routerLink]="['../add-training', missingRecord]"
           [state]="{ training: 'mandatory' }"
           (click)="addButtonClicked()"
         >
