Changed missingRecord to be passed via state rather than routerLink

--- a/src/app/features/workers/new-training-qualifications-record/missing-mandatory-training/missing-mandatory-training.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/missing-mandatory-training/missing-mandatory-training.component.html
@@ -10,8 +10,8 @@
           [attr.data-testid]="missingRecord.id"
           draggable="false"
           role="button"
-          [routerLink]="['../add-training', missingRecord]"
-          [state]="{ training: 'mandatory' }"
+          [routerLink]="['../add-training']"
+          [state]="{ training: 'mandatory', missingRecord }"
           (click)="addButtonClicked()"
         >
           Add
