Updated trainingCategory tests into a describe, included a test to check Category dropdown and edited missingMandatoryTraining test

--- a/src/app/shared/directives/add-edit-training/add-edit-training.component.html
+++ b/src/app/shared/directives/add-edit-training/add-edit-training.component.html
@@ -35,6 +35,7 @@
               [formControlName]="'category'"
               id="category"
               name="category"
+              data-testid="trainingSelect"
             >
               <option [ngValue]="null">Select a training category</option>
               <option *ngFor="let category of categories" [value]="category.id">
