--- a/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record-summary/new-training-and-qualifications-record-summary.component.scss
+++ b/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record-summary/new-training-and-qualifications-record-summary.component.scss
@@ -120,7 +120,7 @@ hr {
 }
 
 .asc-grid-container {
-  display: grid;
+  display: flex;
   grid-column-gap: 8px;
   grid-template-columns: 20% 80%;
 }
