--- a/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
@@ -94,6 +94,7 @@
     [qualificationsCount]="qualificationsCount"
     [expiresSoonTrainingCount]="expiresSoonTraining"
     [expiredTrainingCount]="expiredTraining"
+    [mandatoryTrainingCount]="mandatoryTrainingCount"
   ></app-new-training-and-qualifications-record-summary>
 
   <div class="govuk-grid-row">
