--- a/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record-summary/new-training-and-qualifications-record-summary.component.scss
+++ b/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record-summary/new-training-and-qualifications-record-summary.component.scss
@@ -119,10 +119,9 @@ hr {
   }
 }
 
-.asc-grid-container {
+.asc-flex-container {
   display: flex;
-  grid-column-gap: 8px;
-  grid-template-columns: 20% 80%;
+  gap: 3%;
 }
 
 .asc-records-count {
