--- a/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
@@ -94,7 +94,7 @@
     [qualificationsCount]="qualificationsCount"
     [expiresSoonTrainingCount]="expiresSoonTraining"
     [expiredTrainingCount]="expiredTraining"
-    [mandatoryTrainingCount]="mandatoryTrainingCount"
+    [missingMandatoryTraining]="missingMandatoryTraining.length"
   ></app-new-training-and-qualifications-record-summary>
 
   <div class="govuk-grid-row">
