updates wording of eLearning accordion text

--- a/src/app/features/benefits-bundle/benefits-bundle.component.html
+++ b/src/app/features/benefits-bundle/benefits-bundle.component.html
@@ -105,7 +105,7 @@
       <app-benefit-accordion [benefit]="benefits[4]" [index]="4" (toggleEmitter)="toggleAccordion(4)">
         <p>
           Skills for Care offer low cost eLearning on a variety of topics. Your ASC-WDS account entitles you to 10% off
-          the purchase price for the modules
+          the purchase price of the modules.
         </p>
 
         <p>
