Added default font size for training summary box

--- a/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record-summary/new-training-and-qualifications-record-summary.component.scss
+++ b/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record-summary/new-training-and-qualifications-record-summary.component.scss
@@ -5,6 +5,7 @@
   background-color: govuk-colour('light-grey');
   display: flex;
   padding: 30px 40px;
+  font-size: 19px;
 
   @media only screen and (max-width: 830px) {
     padding: 15px 20px;
