feat(wdfUserEditPermissions): Render permissions with WDF options on Edit permissions page

--- a/src/app/features/workplace/user-account-edit-permissions/user-account-edit-permissions.component.html
+++ b/src/app/features/workplace/user-account-edit-permissions/user-account-edit-permissions.component.html
@@ -25,7 +25,7 @@
                   type="radio"
                 />
                 <label class="govuk-label govuk-radios__label" for="role-{{ i }}">
-                  {{ item.label }}
+                  {{ item.permissionsQuestionValue }}
                 </label>
               </div>
               <div
