--- a/src/app/features/bulk-upload/bulk-upload-page/bulk-upload-page.component.html
+++ b/src/app/features/bulk-upload/bulk-upload-page/bulk-upload-page.component.html
@@ -37,6 +37,6 @@
   </div>
 
   <div class="govuk-grid-column-full govuk-!-margin-top-0">
-    <app-drag-and-drop-files-list></app-drag-and-drop-files-list>
+    <app-drag-and-drop-files-list [sanitise]="sanitise"></app-drag-and-drop-files-list>
   </div>
 </div>
