--- a/src/app/features/workplace/user-account-edit-permissions/user-account-edit-permissions.component.html
+++ b/src/app/features/workplace/user-account-edit-permissions/user-account-edit-permissions.component.html
@@ -14,7 +14,7 @@
             <h1 class="govuk-fieldset__heading">Permissions</h1>
           </legend>
           <div class="govuk-radios">
-            <ng-container *ngFor="let item of roleRadios; let i = index">
+            <ng-container *ngFor="let item of permissionsTypeRadios; let i = index">
               <div class="govuk-radios__item">
                 <input
                   class="govuk-radios__input"
