feat(wdfUserEditPermissions): Change form to use permissions type and convert into role and canManageWdfClaims on submit

--- a/src/app/features/workplace/user-account-edit-permissions/user-account-edit-permissions.component.html
+++ b/src/app/features/workplace/user-account-edit-permissions/user-account-edit-permissions.component.html
@@ -18,32 +18,32 @@
               <div class="govuk-radios__item">
                 <input
                   class="govuk-radios__input"
-                  [formControlName]="'role'"
-                  id="role-{{ i }}"
-                  name="role"
-                  value="{{ item.value }}"
+                  [formControlName]="'permissionsType'"
+                  id="permissionsType-{{ i }}"
+                  name="permissionsType"
+                  value="{{ item.permissionsQuestionValue }}"
                   type="radio"
                 />
-                <label class="govuk-label govuk-radios__label" for="role-{{ i }}">
+                <label class="govuk-label govuk-radios__label" for="permissionsType-{{ i }}">
                   {{ item.permissionsQuestionValue }}
                 </label>
               </div>
               <div
-                *ngIf="user?.displayStatus !== 'Pending' && item.value === 'Edit'"
+                *ngIf="user?.displayStatus !== 'Pending' && item.role === 'Edit'"
                 class="govuk-radios__conditional"
-                [class.govuk-radios__conditional--hidden]="form.get('role').value !== 'Edit'"
-                id="role-conditional-{{ i }}"
+                [class.govuk-radios__conditional--hidden]="form.get('permissionsType').value !== 'Edit'"
+                id="permissionsType-conditional-{{ i }}"
               >
                 <div class="govuk-checkboxes">
                   <div class="govuk-checkboxes__item">
                     <input
                       class="govuk-checkboxes__input"
-                      id="primary"
-                      name="primary"
+                      id="isPrimary"
+                      name="isPrimary"
                       type="checkbox"
-                      [formControlName]="'primary'"
+                      [formControlName]="'isPrimary'"
                     />
-                    <label class="govuk-label govuk-checkboxes__label" for="primary">Make primary user</label>
+                    <label class="govuk-label govuk-checkboxes__label" for="isPrimary">Make primary user</label>
                   </div>
                 </div>
               </div>
