updates staff details form to allow cancel on adding aas well as editing

--- a/src/app/features/workers/staff-details/staff-details.component.html
+++ b/src/app/features/workers/staff-details/staff-details.component.html
@@ -116,6 +116,7 @@
   <app-submit-button
     [return]="canReturn"
     [canExit]="canExit"
+    [exitText]="exitText"
     [recordSummary]="false"
     [callToAction]="this.submitTitle"
     (clicked)="onSubmit($event)"
