feat(wdfUserEditPermissions) Updated user-account-edit-permission to show make primary checkbox, created tests to check the primary checkbox is pre-filling and being displayed

--- a/src/app/features/workplace/user-account-edit-permissions/user-account-edit-permissions.component.html
+++ b/src/app/features/workplace/user-account-edit-permissions/user-account-edit-permissions.component.html
@@ -31,8 +31,11 @@
               <div
                 *ngIf="user?.displayStatus !== 'Pending' && item.role === 'Edit'"
                 class="govuk-radios__conditional"
-                [class.govuk-radios__conditional--hidden]="form.get('permissionsType').value !== 'Edit'"
+                [class.govuk-radios__conditional--hidden]="
+                  form.get('permissionsType').value !== item.permissionsQuestionValue
+                "
                 id="permissionsType-conditional-{{ i }}"
+                [attr.data-testid]="'primaryCheckbox-' + i"
               >
                 <div class="govuk-checkboxes">
                   <div class="govuk-checkboxes__item">
